# soccer-tracking-ai

./: .gitignore  .gitignore.bak  README.md  main.py  pyproject.toml  test_mask_green.py  test_production_mode.py
src/ai_tracking/: __init__.py  clustering.py  debug.py  features.py  models.py  rendering.py  team_assignment.py  yolo_video.py
tests/: conftest.py  test_clustering.py  test_features.py
