[project]
name = "soccer-tracking-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.6.1",
    "ultralytics>=8.3.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]
